# jj-plan

./: .env.example  .gitignore  Cargo.toml  LICENSE  MANUAL.md  README.md  TECHNICAL.md  install.sh  jj-plan.bats  jj-plan.zsh  jj-pop.bats  jj-pop.zsh  test.sh
legacy/: README.md  jj-plan.zsh
src/: debug.rs  dispatch.rs  error.rs  flush.rs  jj_binary.rs  lib.rs  main.rs  markdown.rs  plan_dir.rs  plan_file.rs  plan_registry.rs  pr_cache.rs  repo.rs  stack.rs  stack_builder.rs  stack_context.rs  stack_render.rs  sync.rs  template.rs  types.rs  workspace.rs  wrap.rs
src/auth/: gitea.rs  github.rs  gitlab.rs  mod.rs
src/commands/: abandon.rs  config.rs  describe.rs  done.rs  help.rs  mod.rs  nav.rs  new.rs  stack.rs  stack_cmd.rs  summary.rs  track.rs  untrack.rs
src/merge/: execute.rs  mod.rs  plan.rs
src/platform/: detection.rs  error.rs  factory.rs  gitea.rs  github.rs  gitlab.rs  mod.rs
src/submit/: analysis.rs  comments.rs  execute.rs  mod.rs  plan.rs  progress.rs
tests/: gitea_integration.rs  rebase_integration.rs
