[package]
name = "jj-plan"
description = "Plan-oriented programming for Jujutsu VCS"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
readme = "README.md"
keywords = ["jj", "jujutsu", "vcs", "planning"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "jj-plan"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
jj-lib = { version = "0.38", default-features = false, features = ["git"] }
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
toml_edit = "0.24"

[dev-dependencies]
tempfile = "3"